[package]
name = "btree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.134"
num_enum = "0.5.7"
smallvec = { version = "1.10.0", features = ["union"] }
rustc-hash = "1.1.0"
once_cell = "1.16.0"
tracing = { version = "0.1.37", features = ["release_max_level_off", "max_level_trace", "attributes"] }
tracing-subscriber = { version = "0.3.16" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
counter = "0.5.7"
bytemuck = "1.12.3"

[lib]
crate-type = ["staticlib", "lib"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[profile.local-perf]
inherits = "release"
debug = true
incremental = true

[features]
default = ["use-full-length_false", "head-early-abort-create_false", "inner_u64"]
use-full-length_true = []
use-full-length_false = []
head-early-abort-create_true = []
head-early-abort-create_false = []
inner_all = []
inner_basic = []
inner_u32 = []
inner_u64 = []
