[package]
name = "btree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.134"
num_enum = "0.5.7"
smallvec = { version = "1.10.0", features = ["union"] }
rustc-hash = "1.1.0"
once_cell = "1.16.0"
tracing = { version = "0.1.37", features = ["release_max_level_off", "max_level_trace", "attributes"] }
tracing-subscriber = { version = "0.3.16" }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_xoshiro = "0.6.0"
counter = "0.5.7"
bytemuck = "1.12.3"
bstr = "1.0.1"
wyhash = "0.5.0"
crc32fast = "1.3.2"
core_affinity = "0.7.2"
minstant = "0.1.2"
bumpalo = "3.11.1"
rand_distr = "0.4.3"
enum-iterator = "1.2.0"
perf-event = "0.4.8"
serde_json = "1.0.89"

[lib]
crate-type = ["staticlib", "lib"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[profile.local-perf]
inherits = "release"
debug = true
incremental = true

[features]
default = ["head-early-abort-create_false","inner_basic","leaf_hash","hash-leaf-simd_32","strip-prefix_false","hash_crc32","descend-adapt-inner_none","branch-cache_true","dynamic-prefix_false","hash-variant_head","basic-use-hint_true","basic-prefix_true","basic-heads_true","cache-accuracy_true"]
head-early-abort-create_false = []
inner_basic = []
inner_padded = []
inner_explicit_length = []
inner_ascii = []
inner_art = []
leaf_basic = []
leaf_hash = []
hash-leaf-simd_32 = []
strip-prefix_false = []
strip-prefix_true = []
hash_crc32 = []
descend-adapt-inner_none = []
descend-adapt-inner_1000 = []
descend-adapt-inner_100 = []
descend-adapt-inner_10 = []
branch-cache_false = []
branch-cache_true = []
dynamic-prefix_false = []
dynamic-prefix_true = []
hash-variant_head = []
hash-variant_alloc = []
basic-use-hint_false = []
basic-use-hint_true = []
basic-use-hint_naive = []
basic-prefix_false = []
basic-prefix_true = []
basic-heads_false = []
basic-heads_true = []
cache-accuracy_true = []
cache-accuracy_false = []
